# Self-auditing-RAG

./: README.md
Self-auditing-RAG/: .gitignore  README.md  main.py  pyproject.toml
Self-auditing-RAG/src/rag/: auditor.py  config.py  decision.py  embedder.py  generator.py  pipeline.py  retriever.py
